objects/Kadaikanri__c.object
<CustomObject>
    <description>プロジェクト管理で利用(uhuru/秋山)</description>
    <fields>
        <fullName>Kadainaiyo__c</fullName>
        <label>課題内容［本文］</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Kanryoubi__c</fullName>
        <label>課題完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Naiyokakunin__c</fullName>
        <label>経過内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Okyakusamakisairan__c</fullName>
        <label>お客様記載欄</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sakuseisya__c</fullName>
        <label>作成者（またはタスク依頼者）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syouhikousu__c</fullName>
        <inlineHelpText>現在までの消費工数を記載します。（単位：時間、0.5刻み）</inlineHelpText>
        <label>現在までの消費工数</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>課題のクローズ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gaibuid__c</fullName>
        <displayFormat>K-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>外部ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>kadaibunrui__c</fullName>
        <label>課題分類</label>
        <picklist>
            <picklistValues>
                <fullName>0.未分類</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1.機能追加修正(範囲内）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.機能追加修正(範囲外)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.バグ・瑕疵</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>kadainum__c</fullName>
        <displayFormat>No{000000}-{YYYY}{MM}{DD}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>No{000000}-{YYYY}{MM}{DD}</inlineHelpText>
        <label>課題No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>kadairiyu__c</fullName>
        <defaultValue>&quot;必ず記載してください。&quot;</defaultValue>
        <label>課題発生または優先度理由</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kadaisutats__c</fullName>
        <label>Uhuruステータス</label>
        <picklist>
            <picklistValues>
                <fullName>未着手</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>着手中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>完了</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>保留</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ketteijikou__c</fullName>
        <label>決定内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kisyasutetasu__c</fullName>
        <label>貴社ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>確認中</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>対応中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>確認済</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>syounin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>お客様に入力して頂きます。</inlineHelpText>
        <label>決定内容承認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>yuusenndo__c</fullName>
        <inlineHelpText>高→影響範囲が広く、作業の緊急性を要するるもの。またはバグなど。
中→通常はこちらを選択してください。（デフォルト値）
低→質問や事象の記録など。</inlineHelpText>
        <label>優先度</label>
        <picklist>
            <picklistValues>
                <fullName>中</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>課題管理</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>課題内容［略］80文字まで</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>